--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body {
     margin: 0;
     font-family: 'Karla', sans-serif;
-    background-color: #14141c;
+    background-color: #0b0b13ef;
     color: white;
     text-align: center;
     padding: 40px;
+    font-family: "Poppins", sans-serif;
+  font-weight: 300;
 }
 
 .container {
@@ -13,9 +16,30 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: #1a1b26;
+    background-color: #626de45a;
     padding: 20px;
     border-radius: 20px;
+}
+
+.card-pokemon-id {
+    margin-top: 0;
+}
+
+#main-container {
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(27, 24, 24, 0.334);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+}
+
+.pokemon-image{
+    width: 13vw;
+}
+
+.container.row{
+    background-color: rgba(245, 245, 220, 0);
+    width: 30vw;
 }
 
 .row {
@@ -29,7 +53,8 @@ body {
 }
 
 .btn {
-    background-color: #fa6400;
+    color: white;
+    background-color: #875cd1;
     border: 0px solid transparent;
     border-radius: .25rem;
     cursor: pointer;
@@ -42,6 +67,6 @@ body {
 
 .btn:hover,
 .btn:focus {
-    background-color: #fb8332;
+    background-color: #98C8DE;
     box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
 }
